# scene-detect

./: .gitignore  README.md  pyproject.toml  scene-detect.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  store.tsx  theme.css  types.ts
frontend/src/components/: FacePanel.tsx  FilePicker.tsx  MenuBar.tsx  ProfilerPanel.tsx  ScenePanel.tsx  SettingsPanel.tsx  Timeline.tsx  VideoPlayer.tsx
static/: app.js  index.html  style.css
static/assets/: index-BUaUE-sE.css  index-BV7xUKi0.js  index-DyDpzU3A.js  index-SeA5coOV.js  index-U2I0LkQe.css
